# petra

./: .gitignore  Cargo.toml  README.md  flake.nix
data/: Cargo.toml
data/src/: column.rs  data_type.rs  database.rs  filter.rs  lib.rs  modifier.rs  table.rs
data/src/query/: create_table.rs  delete.rs  insert.rs  mod.rs  select.rs
data/src/table/: column.rs  data_type.rs  mod.rs  modifier.rs  table.rs
data_derive/: Cargo.toml
data_derive/src/: column.rs  lib.rs  modifier.rs  quotes.rs  table.rs
data_derive/src/table/: column.rs  foreign_reference.rs  foreign_rule.rs  mod.rs  modifier.rs
mensula/: Cargo.toml
mensula/src/: database.rs  filter.rs  lib.rs  meta.rs
mensula/src/query/: create_table.rs  delete.rs  insert.rs  mod.rs  select.rs
mensula/src/table/: column.rs  data_type.rs  mod.rs  modifier.rs  table.rs
mensula_derive/: Cargo.toml
mensula_derive/src/: lib.rs  quotes.rs
mensula_derive/src/table/: column.rs  foreign_reference.rs  foreign_rule.rs  modifier.rs
mensula_key/: Cargo.toml
mensula_key/src/: lib.rs
src/: app.rs  auth.rs  cli.rs  config.rs  db.rs  error.rs  foo_data.rs  lib.rs  main.rs  migrate.rs  request.rs  util.rs
src/api/: migrate.rs  mod.rs
src/api/category/: api.rs  data.rs  mod.rs  server.rs
src/api/payment/: api.rs  data.rs  server.rs
src/api/rule/: api.rs  data.rs  server.rs
src/api/tink/: api.rs  data.rs  server.rs
src/api/user/: api.rs  data.rs  server.rs
src/component/: amount.rs  category.rs  error.rs  icon.rs  loading.rs  mod.rs  payment.rs  response_builder.rs  select_menu.rs  user.rs
src/component/field/: category_field.rs  category_group_field.rs  choice_field.rs  field.rs  icon_field.rs  mod.rs  submit_field.rs  text_field.rs  text_vec_field.rs
src/component/util/: button_status.rs  mod.rs
src/page/: category.rs  home.rs  mod.rs  payment.rs  rule.rs  user.rs
src/page/add/: edit_payment.rs  edit_payment_view.rs  mod.rs  tink_button.rs
src/provider/: mod.rs  provide.rs  provider.rs
src/tables/: category.rs  link_payment_category.rs  mod.rs  payment.rs  rule.rs  tink_token.rs  user.rs
src/util/: calculated_amount.rs  lang.rs  mod.rs  month.rs  reload_signal.rs  search.rs
src/web/: auth.rs  file.rs  index.rs  mod.rs
src/web/api/: category.rs  current_user.rs  mod.rs  month_index.rs  payment.rs  rule.rs  user.rs
src/web/api/tink/: mod.rs  payment.rs  tink_secret.rs  token.rs  transaction.rs
style/: main.scss
tink-banking/: Cargo.toml
tink-banking/src/: auth.rs  config.rs  lib.rs  month.rs  secret.rs
tink-banking/src/transaction/: api_transaction.rs  mod.rs  request.rs  response_transaction.rs  transaction.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/: app.html  style.css  style.scss
web/src/lib/: api.ts  data_types.ts  db.ts  text.ts  util.ts
web/src/lib/components/: DBLoader.svelte  EditablePaymentView.svelte  Headerbar.svelte  Icon.svelte  MoneySpan.svelte  MonthButton.svelte  MonthGraph.svelte  MonthOverview.svelte  PaymentView.svelte  RuleView.svelte  SelectionMenu.svelte  UserStack.svelte  UserView.svelte
web/src/lib/db/: category.ts  editablePayment.ts  helpers.ts  loader.ts  month.ts  payment.ts  rule.ts  tink.ts  user.ts
web/src/routes/: +layout.ts  +page.svelte
web/src/routes/add/: +page.svelte
web/src/routes/categories/: +page.svelte
web/src/routes/rules/: +page.svelte
web/src/routes/users/: +page.svelte
