[package]
name = "petra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web_server = "0.4.2"
base64 = "0.21.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
data = { path = "data" }
chrono = { version = "0.4.24", features = ["serde"] }
rand = "0.8.5"
minreq = { version = "2.7.0", features = ["https", "json-using-serde"] }
sha256 = "1.1.3"
clap = {version = "4.3.21", features = ["derive"]}