[package]
name = "petra"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.21.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
chrono = { version = "0.4.24", features = ["serde"] }
sha256 = "1.1.3"

leptos = "0.4.3"
leptos_router = "0.4.3"
leptos_meta = "0.4.3"

# Server only
actix-web = { version = "4.3.1", optional = true }
actix-files = { version = "0.6.2", optional = true }
leptos_actix = { version = "0.4.3", optional = true }
data = { path = "data", optional = true }
tink-banking = { path = "./tink-banking", optional = true }
clap = { version = "4.3.12", features = ["derive"], optional = true }
wasm-bindgen = "0.2.87"

[features]
server = [
    "dep:actix-web",
    "dep:actix-files",
    "dep:leptos_actix",
    "dep:data",
    "dep:tink-banking",
    "dep:clap",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr"
]
web = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
]

[package.metadata.leptos]
output-name = "petra"
site-name = "target/site"
site-pkg-dir = "pkg"

style-file = "style/main.scss"
assets-dir = "assets"

site-addr = "127.0.0.1:8187"
reload-port = 8178

env = "DEV"

bin-features = ["server"]
bin-default-features = false

lib-features = ["web"]
lib-default-features = false
lib-profile-release = "wasm-release"