[package]
name = "petra"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
cfg-if = "1.0.0"
mensula_key = { path = "./mensula_key" }

leptos = "0.5.2"
leptos_router = "0.5.2"
leptos_meta = "0.5.2"
leptos-use = "0.8.1"
wasm-bindgen = "0.2.88"

# Server only
actix-web = { version = "4.4.0", optional = true }
actix-files = { version = "0.6.2", optional = true }
actix-web-httpauth = { version = "0.8.1", optional = true }
leptos_actix = { version = "0.5.2", optional = true }

mensula = { path = "./mensula", optional = true }
tink-banking = { path = "./tink-banking", optional = true }

clap = { version = "4.4.7", features = ["derive"], optional = true }
once_cell = { version = "1.18.0", optional = true }
rpassword = { version = "7.2.0", optional = true }

sha256 = { version = "1.4.0", optional = true }

[features]
default = ["ssr"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:actix-web",
    "dep:actix-files",
    "dep:actix-web-httpauth",
    "dep:leptos_actix",
    "dep:mensula",
    "dep:tink-banking",
    "dep:clap",
    "dep:once_cell",
    "dep:rpassword",
    "dep:sha256",
]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
]

[package.metadata.leptos]
output-name = "petra"
site-name = "target/site"
site-pkg-dir = "pkg"

style-file = "style/main.scss"
assets-dir = "assets"

site-addr = "127.0.0.1:8187"
reload-port = 8178

env = "DEV"

bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false
#lib-profile-release = "release-wasm-size"
