[package]
name = "mensula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.31.0"
mensula_derive = { path = "../mensula_derive" }
mensula_key = { path = "../mensula_key", features = ["sqlite"] }
serde = { version = "1.0.171", features = ["derive"] }
toml = "0.7.6"
ulid = "1.0.0"
