[package]
name = "tink-banking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.7.0", features = ["https", "json-using-serde"] }
sha256 = "1.1.3"
serde = "1.0.171"
serde_json = "1.0.103"
toml = "0.7.6"
chrono = "0.4.26"